* In order to account for these new set of scenes, the Bull Tower scenes have been locked until you finish these. In addition, you need to help out the outlaws to a greater extent.
* Some of Cveta's non-repeatable interactions now give outlaw rep (violin).
* Tweaked the GUI so that the entire portrait + bars trigger the select event.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4f
------------
* Fixed some bugs
* Expanded on the "wait" menu (hotkey Z) to allow for better control. Sleep still does the regular 8 hours.
* Added a shortcut to Party->Member. Just click the portrait of whoever you want to look over.
* Royal Grounds (Castle) random exploration events added (The Observer)
* Fixed a bug that would break the racial calculations (introduced by the Race overhaul)
* New Terry sex scene: Have a drink, written by QB and LD
 - Breasts, requires the fox to be lactating
 - Cock, requires the fox to have a cock
* Fixed a cavalcade bug (draw would calculate wrong)
* New Shadow Lady Themeroom: Under the Dragon's Claw (written by me)
 - Only one chapter so far, but it has three possible endings (four paths)
 - Further chapters will build on choices you make now
 - There is a 'start over' function

Version 0.4e
------------
* A pile of typos and bugfixes
* Added Asche's first two tasks, plus reward sex. They have a relatively low level requirement and a "need to buy" limit of 500/1000 coins from Asche before they activate. Written by The Observer
* Added the first two chapters of Birth of a Kingdom, another Shadow Lady Themeroom written by The Observer

Version 0.4d2
-------------
* Fixed several issues connected to the new item system:
 - Fixed the issue that was causing smoke bombs to break certain scenes by escaping unescapable battles. Smoke Bomb is now disabled in those fights