@@ -5,8 +5,6 @@ TODO for Fall of Eden
     IMMEDIATE
 -----------------
 
-- Maria's dead drops
-
 ROYALS
 - Twins
 - Lei first job
