@@ -20,6 +20,7 @@ Version 0.4f2
 * In order to account for these new set of scenes, the Bull Tower scenes have been locked until you finish these. In addition, you need to help out the outlaws to a greater extent.
 * Some of Cveta's non-repeatable interactions now give outlaw rep (violin).
 * Tweaked the GUI so that the entire portrait + bars trigger the select event.
+* Implemented a new master ability for the Rogue job that reduces enemy aggro toward the caster (ofc, you need to have companions for this to have any effect)
 
 --------------------------------------------
              PREVIOUS VERSIONS
